# extension-cpp

./: CMakeLists.txt  README.md  analyzeBench.Rmd  check.py  kernel.cu  lltm.py  lltm_cuda.cpp  lltm_cuda_kernel.cu  lltm_cuda_kernel_no_pipe.cu  notes.txt  setup.py
analyzeBenchmarks/: analyzeBench.Rmd  analyzeBench.nb.html  benchRes.csv  csvRes.csv  someFromTransformed.csv
env/: pyvenv.cfg
env/Scripts/: Activate.ps1  activate  activate.bat
extension-cpp/: CMakeLists.txt  extension-cpp.cpp  extension-cpp.h
